--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,8 +4,12 @@
 
 {% for post in object_list %}
 <div>
-    <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-    <p> {{ post.body | slice:":100" }} </p>
+    <h2>{{ post.title}}</h2>
+    <h3>{{ post.author }}</h3>
+    <p> {{ post.body }} </p>
 </div>
+
 {% endfor %}
+
+
 {% endblock content %}
